feat(all): sync update code from dev_4.0